# platformer

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  platformer.sln  vcpkg.json
platformer/: camera.cpp  collision.cpp  entity.cpp  keyCommands.cpp  main.cpp  platformer.cpp  platformer.vcxproj  platformer.vcxproj.filters  quadTree.cpp  sahars_platformer.h
source/: camera.cpp  main.cpp  quadTree.cpp  random.cpp  raylibImplementations.cpp  sahars_platformer.h
src/: collision.cpp  entity.cpp  sahars_platformer.h  userInput.cpp
